# GAV

./: .gitignore  Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: bin.rs
src/daemon/: bin.rs
src/daemon/daemon/: daemon.rs  mod.rs
src/frontend/: bin.rs
src/frontend/ui/: app.rs  mod.rs
src/lib/: lib.rs
src/lib/ui/: app.rs
src/lib/utils/: mod.rs  rand_utils.rs  sql_utils.rs
src/lib/winseccheck/: mod.rs  win_utils.rs
src/pwmanager/: bin.rs
src/pwmanager/functionality/: mod.rs  pw_utils.rs  pw_utils.rs1  userdb.rs
src/pwmanager/ui/: app.rs  mod.rs
src/winseccheck/: mod.rs  win_utils.rs
