[package]
name = "gav"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
mysql = "26.0.0"
log = "0.4.26"
rand = { version = "0.9.0", features = ["std_rng", "log"] }
serde = "1.0.219"

[lib]
name = "gavlib"
path = "src/lib/lib.rs"

[[bin]]
name = "gavbin"
path = "src/bin/bin.rs"

[[bin]]
name = "gavpwmanager"
path = "src/pwmanager/bin.rs"
